minzc/tests/backend_e2e/results/control_flow_wasm.txt
  âœ… Code generation successful

=== Generated Code Analysis ===
;; MinZ WebAssembly generated code
;; Generated: 2025-08-06 16:51:44
;; Note: WASM uses stack-based calling convention, no SMC

(module
  ;; Import memory
  (import "env" "memory" (memory 1))
  (import "env" "print_char" (func $print_char (param i32)))
  (import "env" "print_i32" (func $print_i32 (param i32)))

  ;; Function: tests.backend_e2e.sources.control_flow.main
  (func $tests.backend_e2e.sources.control_flow.main
    (local $i i32)
    (local $result i32)
    (local $result i32)
    (local $r1 i32)
    (local $r2 i32)
    (local $r3 i32)
    (local $r4 i32)
    (local $r5 i32)
    (local $r6 i32)
    (local $r7 i32)
    (local $r8 i32)
    (local $r9 i32)
    (local $r10 i32)
    (local $r11 i32)
    (local $r12 i32)
    (local $r13 i32)
    (local $r14 i32)
    (local $r15 i32)
    i32.const 0  ;; r2 = 0
    local.set $r2
    local.get $r2  ;; store i
    global.set $i
    ;; Label: loop_1
    global.get $i  ;; r3 = i
    local.set $r3
    i32.const 10  ;; r4 = 10
    local.set $r4
    local.get $r3  ;; r5 = r3 < r4
    local.get $r4
    i32.lt_s
    local.set $r5
    ;; TODO: jump_if_not r5, end_loop_2 (needs block structure)
    global.get $i  ;; r6 = i
    local.set $r6
    i32.const 1  ;; r7 = 1
    local.set $r7
    local.get $r6  ;; r8 = r6 + r7
    local.get $r7
  ðŸ”¨ Attempting binary generation...
tests/backend_e2e/outputs/control_flow_wasm.wat:15:12: error: redefinition of local "$result"
    (local $result i32)
           ^^^^^^^
tests/backend_e2e/outputs/control_flow_wasm.wat:34:16: error: undefined global variable "$i"
    global.set $i
               ^^
tests/backend_e2e/outputs/control_flow_wasm.wat:36:16: error: undefined global variable "$i"
    global.get $i  ;; r3 = i
               ^^
tests/backend_e2e/outputs/control_flow_wasm.wat:45:16: error: undefined global variable "$i"
    global.get $i  ;; r6 = i
               ^^
tests/backend_e2e/outputs/control_flow_wasm.wat:54:16: error: undefined global variable "$i"
    global.set $i
               ^^
tests/backend_e2e/outputs/control_flow_wasm.wat:57:16: error: undefined global variable "$i"
    global.get $i  ;; r9 = i
               ^^
tests/backend_e2e/outputs/control_flow_wasm.wat:69:16: error: undefined global variable "$result"
    global.set $result
               ^^^^^^^
tests/backend_e2e/outputs/control_flow_wasm.wat:75:16: error: undefined global variable "$result"
    global.set $result
               ^^^^^^^
tests/backend_e2e/outputs/control_flow_wasm.wat:81:24: error: undefined function variable "$main"
  (export "main" (func $main))
                       ^^^^^
  âŒ Binary generation failed
